alguns ajustes no estilo

--- a/API-CEP Project/index.html
+++ b/API-CEP Project/index.html
@@ -10,9 +10,9 @@
 
 </head>
 <body>
-    <header class="title">
-        <h1>Consulta de CEP</h1>
-    </header>
+
+    <h1>Consulta de CEP</h1>
+
     <section class="container-principal">
         <div class="entrada">
             <input type="number" id="inCep" placeholder="06423000" minlength="8" maxlength="8">
@@ -21,8 +21,9 @@
             <button id="btPesquisarCep"><i class='bx bx-search-alt-2'></i></button>
         </div>
     </section>
-    <div class="respostaCep">
-        Seu resultado aqui
+    <div id="container-resp">
+        <div class="respostaCep">
+        </div>
     </div>
 
     
